Add Skript 2.9.5 hook and refactor platform/common
Add a new hooks/skript295 module to provide legacy Skript 2.9.5 integration (registrations, effects, events, runtime, and build logic with multi‑Java classifiers). Switch existing skript and skript213 modules to depend on platform-common instead of platform-paper and update imports to use platform.common.event types. Add platform/common and platform/bukkit modules and a shared gradle file, update hooks build to include JVM classifiers for Java 8 and 11, and add a libs.versions entry for skript295. Also improve error logging in SocketIOManager by printing the stacktrace and perform minor cleanup of unused imports.